Updated test.html with a new line

--- a/test.html
+++ b/test.html
@@ -10,5 +10,7 @@
 </head>
 <body>
     <h1>Hi! This is a first try of git initialization!</h1>
+    <p>A new line in our file!</p>
+
 </body>
 </html>
