--- a/test.html
+++ b/test.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <h1>Hi! This is a first try of git initialization!</h1>
+    <div><img src="tree.jpg" alt="Hello World from Space"
+        style="width:100%;max-width:960px"></div>
     <p>A new line in our file!</p>
 
 </body>
