--- a/test.html
+++ b/test.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Hi! This is a first try of git initialization!</h1>
     <p>A new line in our file!</p>
+    <p>fix the master branch</p>
 
 </body>
 </html>
