added new image

--- a/test.html
+++ b/test.html
@@ -13,6 +13,6 @@
     <div><img src="tree.jpg" alt="Hello World from Space"
         style="width:100%;max-width:960px"></div>
     <p>A new line in our file!</p>
-
+    <div><img src="car.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 </body>
 </html>
