--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Hello World!</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="bluestyle.css">
     <script src='main.js'></script>
@@ -11,7 +11,7 @@
 <body>
     <h1>Hi! This is a first try of git initialization!</h1>
     <div><img src="tree.jpg" alt="Hello World from Space"
-        style="width:100%;max-width:960px"></div>
+        style="width:100%;max-width:640px"></div>
     <p>A new line in our file!</p>
     <p>fix the master branch</p>
     <div><img src="car.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
